--- a/app/src/main/res/layout/fragment_inputroomcode.xml
+++ b/app/src/main/res/layout/fragment_inputroomcode.xml
@@ -44,8 +44,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/colorMainBold"
-            android:text="방 입장"
-            android:textColor="#000" />
+            android:textColor="@color/colorWhite"
+            android:text="방 입장" />
 
         <Button
             android:id="@+id/btn_cancel"
