--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -7,24 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".activity.SettingActivity">
 
-    <TextView
-        android:id="@+id/tv_logo"
+    <ImageView
+        android:id="@+id/iv_logo_top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:gravity="center_horizontal"
-        android:text="VoicePaper"
-        android:textSize="36sp"
-        android:layout_marginTop="10dp"/>
+        android:layout_height="70dp"
+        android:background="@color/colorWhite"
+        android:src="@drawable/logo_top" />
+
+    <LinearLayout
+        android:id="@+id/layout_gradient"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_below="@id/iv_logo_top"
+        android:background="@drawable/custom_gradient"
+        android:orientation="vertical" />
 
     <ImageView
         android:id="@+id/iv_userImage"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/iv_logo_top"
         app:srcCompat="@drawable/ic_user_main" />
 
     <TextView
@@ -54,22 +58,28 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_userName"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:text="이미지 변경" />
+        android:layout_marginTop="35dp"
+        android:text="프로필 이미지 변경" />
 
     <Button
         android:id="@+id/btn_changePw"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorMainBold"
         android:layout_below="@id/btn_changeImage"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
+        android:textColor="@color/colorWhite"
         android:text="비밀번호 변경" />
 
     <Button
         android:id="@+id/btn_inquire"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorMainBold"
         android:layout_below="@id/btn_changePw"
+        android:layout_marginTop="5dp"
+        android:textColor="@color/colorWhite"
         android:layout_centerHorizontal="true"
         android:text="문의하기" />
 
@@ -77,7 +87,10 @@
         android:id="@+id/btn_about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorMainBold"
         android:layout_below="@id/btn_inquire"
+        android:layout_marginTop="5dp"
+        android:textColor="@color/colorWhite"
         android:layout_centerHorizontal="true"
         android:text="ABOUT" />
 
@@ -86,7 +99,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_about"
+        android:background="@color/colorMainBold"
+        android:layout_marginTop="5dp"
+        android:textColor="@color/colorWhite"
         android:layout_centerHorizontal="true"
-        android:text="SIGNOUT" />
+        android:text="로그아웃" />
 
 </RelativeLayout>
