--- a/app/src/main/res/layout/fragment_roomsetting.xml
+++ b/app/src/main/res/layout/fragment_roomsetting.xml
@@ -93,6 +93,7 @@
                 android:layout_alignTop="@id/tv_roomPermission"
                 android:layout_toRightOf="@id/tv_roomPermission"
                 android:backgroundTint="@color/colorLightGray"
+                android:textColor="@color/colorWhite"
                 android:src="@drawable/custom_rounded"
                 android:text="나만 듣기"
                 android:textSize="12sp" />
@@ -103,6 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@id/tv_roomPermission"
                 android:layout_marginLeft="15dp"
+                android:textColor="@color/colorWhite"
                 android:layout_toRightOf="@id/btn_privateVoice"
                 android:backgroundTint="@color/colorLightGray"
                 android:src="@drawable/custom_rounded"
@@ -149,7 +151,8 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="30dp"
             android:background="@color/colorMainBold"
-            android:text="수정하기" />
+            android:textColor="@color/colorWhite"
+            android:text="방 수정하기" />
 
     </RelativeLayout>
 </ScrollView>
