--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -31,11 +31,21 @@
         android:layout_below="@id/iv_logo_top"
         app:srcCompat="@drawable/ic_user_main" />
 
+    <Button
+        android:id="@+id/btn_changeImage"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/iv_userImage"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:text="프로필 이미지 변경" />
+
     <TextView
         android:id="@+id/tv_userId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/iv_userImage"
+        android:layout_below="@id/btn_changeImage"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:gravity="center_horizontal"
@@ -52,23 +62,13 @@
         android:text="USERNAME" />
 
     <Button
-        android:id="@+id/btn_changeImage"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_userName"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp"
-        android:text="프로필 이미지 변경" />
-
-    <Button
         android:id="@+id/btn_changePw"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorMainBold"
-        android:layout_below="@id/btn_changeImage"
-        android:layout_marginTop="10dp"
+        android:layout_below="@id/tv_userName"
+        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
         android:textColor="@color/colorWhite"
         android:text="비밀번호 변경" />
