--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -32,8 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorMainBold"
-            android:textColor="@color/colorWhite"
+            android:background="@color/colorWhite"
+            android:textColor="@color/colorBlack"
             android:text="취소" />
     </LinearLayout>
 
