--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="colorBlack">#000000</color>
     <color name="colorGold">#FFCC33</color>
     <color name="colorMain">#f5b5b5</color>
-    <color name="colorMainBold">#dd457e</color>
+    <color name="colorMainBold">#e6759f</color>
     <color name="colorBackground">#f2d3c2</color>
     <color name="transparent">#00ffffff</color>
 </resources>
