--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -30,7 +30,7 @@
         android:textSize="15sp"/>
     <EditText
         android:id="@+id/et_name"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_below="@id/iv_userImage"
         android:layout_centerHorizontal="true"
@@ -38,7 +38,7 @@
         android:hint=" 이름을 입력해주세요."/>
     <EditText
         android:id="@+id/et_id"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_below="@id/et_name"
         android:layout_centerHorizontal="true"
@@ -46,18 +46,20 @@
         android:hint="ID를 입력해주세요." />
     <EditText
         android:id="@+id/et_pw"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_below="@id/et_id"
+        android:inputType="textPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:hint="비밀번호를 입력해주세요." />
 
     <EditText
         android:id="@+id/et_rePw"
-        android:layout_width="200dp"
+        android:layout_width="240dp"
         android:layout_height="50dp"
         android:layout_below="@id/et_pw"
+        android:inputType="textPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:hint="비밀번호 확인" />
