--- a/app/src/main/res/layout/fragment_passwordsetting.xml
+++ b/app/src/main/res/layout/fragment_passwordsetting.xml
@@ -2,9 +2,81 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.setting.PasswordSettingFragment">
+    android:orientation="vertical"
+    tools:context=".fragment.main.InputRoomCodeFragment">
+
+    <TextView
+        android:id="@+id/tv_titleMessage"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="33dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center_vertical"
+        android:text="비밀번호 변경"
+        android:textColor="@color/colorMainBold"
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/et_CurrentPassword"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/custom_rounded_edittext"
+        android:hint="현재 비밀번호"
+        android:padding="5dp"
+        android:textSize="16sp" />
+    <EditText
+        android:id="@+id/et_ChangePassword"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/custom_rounded_edittext"
+        android:hint="새 비밀번호"
+        android:padding="5dp"
+        android:textSize="16sp" />
+    <EditText
+        android:id="@+id/et_reChangePassword"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="30dp"
+        android:background="@drawable/custom_rounded_edittext"
+        android:hint="새 비밀번호 확인"
+        android:padding="5dp"
+        android:textSize="16sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_changePW"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/colorMainBold"
+            android:textColor="@color/colorWhite"
+            android:text="변경" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/colorWhite"
+            android:text="취소"
+            android:textColor="#000" />
+    </LinearLayout>
 
 </LinearLayout>
