--- a/app/src/main/res/layout/fragment_passwordsetting.xml
+++ b/app/src/main/res/layout/fragment_passwordsetting.xml
@@ -30,7 +30,9 @@
         android:background="@drawable/custom_rounded_edittext"
         android:hint="현재 비밀번호"
         android:padding="5dp"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:inputType="textPassword"
+        android:maxLength="12"/>
     <EditText
         android:id="@+id/et_ChangePassword"
         android:layout_width="match_parent"
@@ -41,8 +43,10 @@
         android:background="@drawable/custom_rounded_edittext"
         android:hint="새 비밀번호"
         android:padding="5dp"
-        android:textSize="16sp" />
-    <EditText
+        android:textSize="16sp"
+        android:inputType="textPassword"
+        android:maxLength="12"/>
+    <EditTex
         android:id="@+id/et_reChangePassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -52,7 +56,9 @@
         android:background="@drawable/custom_rounded_edittext"
         android:hint="새 비밀번호 확인"
         android:padding="5dp"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:inputType="textPassword"
+        android:maxLength="12"/>
 
     <LinearLayout
         android:layout_width="match_parent"
