--- a/app/src/main/res/layout/fragment_passwordsetting.xml
+++ b/app/src/main/res/layout/fragment_passwordsetting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".fragment.main.InputRoomCodeFragment">
+    tools:context=".fragment.setting.PasswordSettingFragment">
 
     <TextView
         android:id="@+id/tv_titleMessage"
@@ -46,7 +46,7 @@
         android:textSize="16sp"
         android:inputType="textPassword"
         android:maxLength="12"/>
-    <EditTex
+    <EditText
         android:id="@+id/et_reChangePassword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
