--- a/app/src/main/res/layout/fragment_roominfo.xml
+++ b/app/src/main/res/layout/fragment_roominfo.xml
@@ -2,54 +2,71 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="15dp"
+    android:orientation="vertical"
     android:paddingLeft="20dp"
-    android:orientation="vertical">
+    android:paddingTop="15dp">
 
     <TextView
         android:id="@+id/tv_roomCodeLv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:textSize="18sp"
-        android:text="방 코드" />
+        android:text="방 코드"
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/tv_roomCode"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="25dp"
-        android:textIsSelectable="true"
-        android:textSize="30sp"
-        android:text="code" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_roomCode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:text="code"
+            android:textIsSelectable="true"
+            android:textSize="30sp" />
+
+        <ImageButton
+            android:id="@+id/btn_copyCode"
+            android:src="@drawable/img_copy"
+            android:scaleType="fitCenter"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:background="@color/colorWhite"
+            android:layout_marginLeft="25dp"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_memberList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:textSize="18sp"
-        android:text="방 멤버 목록" />
+        android:text="방 멤버 목록"
+        android:textSize="18sp" />
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:stretchColumns="*">
+
         <TableRow>
 
-        <TextView
-            android:id="@+id/tv_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="아이디" />
+            <TextView
+                android:id="@+id/tv_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="아이디" />
 
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/tv_id"
-            android:text="이름" />
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/tv_id"
+                android:text="이름" />
         </TableRow>
     </TableLayout>
 
