--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -19,6 +19,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:textSize="20sp"
+        android:textColor="@color/colorBlack"
         android:text="Room00"/>
 
 </LinearLayout>
